[package]
name = "stager"
version = "0.3.4"
description = "Stage files for packaging."
authors = ["Ed Page <eopage@gmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/stager.git"
homepage = "https://github.com/crate-ci/stager"
documentation = "http://docs.rs/stager/"
readme = "README.md"
categories = ["development-tools::build-utils"]
keywords = ["cli", "packaging"]

[[bin]]
name = "staging"
required-features = ["cli", "de"]

[features]
default = ["de"]
de = [
    "serde",
    "liquid",
]
cli = [
    "env_logger",
    "exitcode",
    "structopt",
]

[dependencies]
failure = "0.1.1"
globwalk = "0.3"
log = "0.4"

liquid = { version = "0.14", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

env_logger = { version = "0.5", optional = true }
exitcode = { version = "1.1", optional = true }
structopt = { version = "0.2", optional = true }

serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.7", optional = true }
toml = { version = "0.4.0", optional = true }
